@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/nt_feature.c (NTGetTypeList): Fix SourceForge issue #485
+&quot;NULL pointer dereference in NTGetTypeList&quot;.</li>
 <li>coders/sun.c (ReadSUNImage): Fix SourceForge issue #484 &quot;Memory
 leak in sun.c&quot;.</li>
 <li>coders/tim.c (ReadTIMImage): Fix SourceForge issue #483 &quot;Memory
